# devcmd

./: .readthedocs.yml  LICENSE  README.md  devcmd.py  pyproject.toml  requirements.txt  setup.py
devcmd/: __init__.py  converters.py  core.py  devcmd.py  errors.py  infoCmd.py  paginators.py  utils.py
devcmd/sections/: __init__.py  base_section.py  commands.py  extensions.py  info.py  mod.py  repl.py  source.py  system.py  tree.py
devcmd/utils/: __init__.py  converters.py  paginators.py
docs/: conf.py  index.rst
src/devcmd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
