[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "devcmd"
version = "0.0.1"
authors = [
  { name="cibere", email="agent45.topsecret@gmail.com" },
]
description = "a developer tool for discord.py discord bots"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Cyber-Incorporated/devcmd"
"Bug Tracker" = "https://github.com/Cyber-Incorporated/devcmd/issues"

[tool.setuptools.packages]
find = {}